--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@commercetools/sdk-auth": "^1.5.0",
+    "algoliasearch": "^4.2.0",
     "apollo-cache-inmemory": "^1.3.5",
     "apollo-client": "^2.4.12",
     "apollo-link": "^1.2.12",
@@ -22,21 +23,27 @@
     "apollo-link-error": "^1.1.11",
     "axios": "^0.19.1",
     "babel-loader": "^8.0.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "global": "^4.4.0",
     "graphql-tag": "^2.9.0",
+    "instantsearch.js": "^4.4.1",
     "lodash.debounce": "^4.0.8",
     "lodash.flatmap": "^4.5.0",
     "lodash.isequal": "^4.5.0",
+    "prettier": "^2.0.5",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-cli-plugin-apollo": "^0.17.2",
     "vue-i18n": "^8.4.0",
+    "vue-instantsearch": "^2.7.0",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-product-zoomer": "^2.0.11",
     "vue-router": "^3.0.3",
     "vue-scrollto": "^2.17.1",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.0.1",
+    "vuex": "^3.3.0",
     "vuex-persistedstate": "^2.5.4",
     "whatwg-fetch": "^3.0.0"
   },
@@ -52,12 +59,12 @@
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
-    "eslint": "^5.16.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-graphql": "^2.1.1",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^6.2.2",
     "jest-fetch-mock": "^1.6.6",
     "jest-junit": "^5.1.0",
     "jest-localstorage-mock": "^2.2.0",
